--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Html5 and CSS3</title>
+        <title>Real Time Clock</title>
         <style>
             #canvas{
                 border: 1px solid grey;
